cluster/varnish/external-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    haproxy.org/load-balance: uri
  labels:
  name: varnish-ext
  namespace: varnish
spec:
  ingressClassName: haproxy-external
  rules:
  - host: varnish-ext.sko.ai
    http:
      paths:
      - backend:
          service:
            name: varnish
            port:
              number: 6081
        path: /
        pathType: Prefix
